conditions.Conditions.scala.error
Erreur de compilation :
Conditions:1: error: ';' expected but 'true' found.
if (estFaceMur()) ==true {
                    ^